pre-commit hook for linting and prettier

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,12 +39,22 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    
+
     --tw-gradient-primary: linear-gradient(to right, #70d6ff, #ff70a6, #ff9770);
-    --tw-gradient-secondary: linear-gradient(to right, #ff9770, #ff70a6, #70d6ff);
+    --tw-gradient-secondary: linear-gradient(
+      to right,
+      #ff9770,
+      #ff70a6,
+      #70d6ff
+    );
     --tw-gradient-blue-to-pink: linear-gradient(to right, #70d6ff, #ff70a6);
     --tw-gradient-pink-to-orange: linear-gradient(to right, #ff70a6, #ff9770);
-    --tw-gradient-tilted: linear-gradient(to top left, #70d6ff, #ff70a6, #ff9770);
+    --tw-gradient-tilted: linear-gradient(
+      to top left,
+      #70d6ff,
+      #ff70a6,
+      #ff9770
+    );
   }
 
   .dark {
@@ -83,10 +93,20 @@
     --chart-5: 340 75% 55%;
 
     --tw-gradient-primary: linear-gradient(to right, #70d6ff, #ff70a6, #ff9770);
-    --tw-gradient-secondary: linear-gradient(to right, #ff9770, #ff70a6, #70d6ff);
+    --tw-gradient-secondary: linear-gradient(
+      to right,
+      #ff9770,
+      #ff70a6,
+      #70d6ff
+    );
     --tw-gradient-blue-to-pink: linear-gradient(to right, #70d6ff, #ff70a6);
     --tw-gradient-pink-to-orange: linear-gradient(to right, #ff70a6, #ff9770);
-    --tw-gradient-tilted: linear-gradient(to top left, #70d6ff, #ff70a6, #ff9770);
+    --tw-gradient-tilted: linear-gradient(
+      to top left,
+      #70d6ff,
+      #ff70a6,
+      #ff9770
+    );
   }
 }
 
